src/SidebarWithMenu/StoryMenu.module.css
.menuBarContainer {
    display: flex;
    background: #D9D9D9;
    flex-direction: column;
    width: 100%; /* Ensure it takes full width */
    min-height: 70px;  /* Enough space for both menus */
}

.menuBar {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0px;
    width: 100%;
    height: 35px;  /* Height of the primary menu */
}

.menuItem, .secondaryMenuItem {
    display: flex;
    width: auto;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
    height: 35px;
    background: #F2EFE5;
}

.activeMenuItem {
    background: #E3E1D9;
}

.button {
    flex-grow: 1;
    height: 100%;
    font-family: 'Inter', sans-serif;
    font-size: 20px;
    line-height: 30px;
    text-align: center;
    color: #000000;
    display: flex;
    justify-content: center;
    align-items: center;
    background: inherit;
    border: none;
    cursor: pointer;
    outline: none;
    padding: 0 30px;
}

.button:hover {
    background: #E3E1D9;
    outline: none;
}

.button:disabled {
    background: #ccc;
    cursor: not-allowed;
}

.secondaryMenuBar {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 35px;
    position: relative;
    top: 0px;
}

.dropdown {
    position: absolute;
    display: flex;
    width: max-content;
    max-height: 250px;
    margin-left: -10px;
    margin-top: 0px;
    flex-direction: column;
    background: white;
    border: 1px solid #ccc;
    padding: 5px;
    z-index: 205;
    overflow: auto;
}

.textOption {
    padding: 5px 10px;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
}

.textOption:hover {
    background-color: #f0f0f0;
}

.applyButton {
    position: relative;
    width: 70px;
    background-color: white;
    border: 1px solid #ccc;
    padding: 2px 5px;
    margin-left: 8px;
    cursor: pointer;
    font-size: 14px;
    font-family: 'Inter', sans-serif;
}

.applyButton:hover {
    background-color: #f0f0f0;
}

.paddingContainer {
    padding-left: 10px;
    padding-right: 10px;
}

